--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -263,6 +263,9 @@
     @media (max-width: 1180px) {
       @include fz(24);
     }
+    @media (max-width: 992px) {
+      @include fz(21);
+    }
     @media (max-width: 599px) {
       @include fz(20);
     }
@@ -302,6 +305,9 @@
       @media (max-width: 1180px) {
         max-height: 130px;
       }
+      @media (max-width: 992px) {
+        max-height: 100px;
+      }
     }
   }
 
@@ -320,6 +326,9 @@
     }
     @media (max-width: 1180px) {
       height: 100px;
+    }
+    @media (max-width: 992px) {
+      height: 70px;
     }
   }
 
@@ -349,16 +358,12 @@
     }
     &-content {
       max-width: 100%;     
-      padding: 40px 40px 120px;
+      padding: 40px 50px 80px;
     }
     &-title {
       @include fz(36);
       margin-bottom: 20px;
-    }
-    &-where {
-      display: none;
-      visibility: hidden;
-    }
+    }    
     &-descr {   
       padding-right: 0px;
     }
@@ -380,6 +385,10 @@
       padding-left: 30px;
       padding-right: 30px;
       padding-bottom: 100%;
+    }
+    &-where {
+      display: none;
+      visibility: hidden;
     }
   }
 
@@ -423,7 +432,7 @@
       margin-left: 76px; 
     }
     @media (max-width: 992px) {
-      margin-left: 40px; 
+      margin-left: 50px; 
     }
 
 
